# mock-data-generator

./: CMakeLists.txt
src/: main.cpp
values/: ages.txt  alcohol_consumption.txt  allergy_causing_ingredients.txt  allergy_causing_products.txt  allergy_cleansers.txt  allergy_exfoliants.txt  allergy_eye_creams.txt  allergy_masks.txt  allergy_moisturizers.txt  allergy_serums.txt  allergy_sunscreens.txt  allergy_toners.txt  baumann.txt  cigarette_consumption.txt  cleansers.txt  essences.txt  exfoliants.txt  eye_creams.txt  face_mists.txt  face_oils.txt  face_scrubs.txt  gluten.txt  hydration.txt  lip_care.txt  locations.txt  masks.txt  moisturizers.txt  products_used.txt  retinols.txt  serums.txt  skin_problems.txt  skin_types.txt  spot_treatments.txt  sunscreens.txt  toners.txt
